manifest/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-ingress
  namespace: jitsi
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: meet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jitsi-web
            port:
              number: 80

      - path: /http-bind
        pathType: Prefix
        backend:
          service:
            name: prosody
            port:
              number: 5280

      - path: /xmpp-websocket
        pathType: Prefix
        backend:
          service:
            name: prosody
            port:
              number: 5280
